added NCF (still doesnt work on page)

--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -116,7 +116,10 @@
         </table>
     </div>
     {% endfor %}
-    
+    <div class="model-selector">
+        <a href="/recommendations?model=knn" class="model-btn">KNN Recommendations</a>
+        <a href="/recommendations?model=ncf" class="model-btn">Neural Recommendations</a>
+    </div>
     <a href="/" class="back-link">Powrót do Strony Głównej</a>
 </body>
 </html>
